load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/lag-proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth/token:go_default_library",
        "//pkg/frontproxy:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
    ],
)

go_binary(
    name = "lag-proxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
