load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/lagrangian-proxy/cmd/lag-rpcserver",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/rpcserver:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
    ],
)

go_binary(
    name = "lag-rpcserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
