load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/lagrangian-proxy/cmd/lagctl",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cert:go_default_library",
        "//pkg/config:go_default_library",
        "//pkg/config/configreader:go_default_library",
        "//pkg/rpc:go_default_library",
        "//pkg/rpc/rpcclient:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/gorilla/securecookie:go_default_library",
        "//vendor/github.com/gorilla/websocket:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/credentials:go_default_library",
        "//vendor/google.golang.org/grpc/keepalive:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)

go_binary(
    name = "lagctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
