load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/lagrangian-proxy/cmd/lagctl",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/lagctl:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_binary(
    name = "lagctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
