load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/lagrangian-proxy/cmd/lagrangian-proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth:go_default_library",
        "//pkg/config:go_default_library",
        "//pkg/config/configreader:go_default_library",
        "//pkg/connector:go_default_library",
        "//pkg/dashboard:go_default_library",
        "//pkg/database:go_default_library",
        "//pkg/database/etcd:go_default_library",
        "//pkg/frontproxy:go_default_library",
        "//pkg/logger:go_default_library",
        "//pkg/netutil:go_default_library",
        "//pkg/rpc/rpcclient:go_default_library",
        "//pkg/rpc/rpcserver:go_default_library",
        "//pkg/server:go_default_library",
        "//pkg/server/ct:go_default_library",
        "//pkg/server/identityprovider:go_default_library",
        "//pkg/server/internalapi:go_default_library",
        "//pkg/server/token:go_default_library",
        "//pkg/session:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/coreos/etcd/clientv3:go_default_library",
        "//vendor/github.com/coreos/etcd/embed:go_default_library",
        "//vendor/github.com/grpc-ecosystem/go-grpc-middleware/retry:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/credentials:go_default_library",
        "//vendor/google.golang.org/grpc/keepalive:go_default_library",
    ],
)

go_binary(
    name = "lagrangian-proxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
