load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/lagrangian-proxy/cmd/lpctl",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth:go_default_library",
        "//pkg/config:go_default_library",
        "//pkg/config/configreader:go_default_library",
        "//pkg/localproxy:go_default_library",
        "//pkg/rpc:go_default_library",
        "//vendor/github.com/gorilla/securecookie:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/credentials:go_default_library",
        "//vendor/google.golang.org/grpc/metadata:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)

go_binary(
    name = "lpctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
