load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/lagrangian-proxy/cmd/lproxy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/localproxy:go_default_library",
        "//vendor/golang.org/x/xerrors:go_default_library",
    ],
)

go_binary(
    name = "lproxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
