load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "framework",
    srcs = [
        "agent.go",
        "framework.go",
        "idp.go",
        "proxy.go",
    ],
    importpath = "go.f110.dev/heimdallr/e2e/framework",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth/authn",
        "//pkg/authproxy",
        "//pkg/cert",
        "//pkg/cert/vault",
        "//pkg/config/configv2",
        "//pkg/config/userconfig",
        "//pkg/database",
        "//pkg/netutil",
        "//pkg/rpc",
        "//pkg/rpc/rpcclient",
        "//pkg/session",
        "//pkg/testing/btesting",
        "//vendor/github.com/go-chi/chi/v5:chi",
        "//vendor/github.com/go-jose/go-jose/v4:go-jose",
        "//vendor/github.com/golang-jwt/jwt/v4:jwt",
        "//vendor/github.com/google/go-cmp/cmp",
        "//vendor/github.com/grpc-ecosystem/go-grpc-middleware/v2/interceptors/retry",
        "//vendor/github.com/miekg/dns",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/zitadel/oidc/v3/pkg/oidc",
        "//vendor/github.com/zitadel/oidc/v3/pkg/op",
        "//vendor/go.f110.dev/xerrors",
        "//vendor/google.golang.org/grpc",
        "//vendor/google.golang.org/grpc/credentials",
        "//vendor/google.golang.org/grpc/keepalive",
        "//vendor/sigs.k8s.io/yaml",
    ],
)
