load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "framework",
    srcs = [
        "agent.go",
        "framework.go",
        "idp.go",
        "proxy.go",
    ],
    importpath = "go.f110.dev/heimdallr/e2e/framework",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth/authn",
        "//pkg/authproxy",
        "//pkg/cert",
        "//pkg/cert/vault",
        "//pkg/config/configv2",
        "//pkg/config/userconfig",
        "//pkg/database",
        "//pkg/netutil",
        "//pkg/rpc",
        "//pkg/rpc/rpcclient",
        "//pkg/session",
        "//pkg/testing/btesting",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_jose_go_jose_v4//:go-jose",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_google_go_cmp//cmp",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/retry",
        "@com_github_miekg_dns//:dns",
        "@com_github_stretchr_testify//assert",
        "@com_github_zitadel_oidc_v3//pkg/oidc",
        "@com_github_zitadel_oidc_v3//pkg/op",
        "@dev_f110_go_xerrors//:xerrors",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//keepalive",
    ],
)
