load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "scenario_test",
    srcs = [
        "dashboard_test.go",
        "proxy_test.go",
    ],
    args = [
        "-e2e.binary=../../$(location //cmd/heimdallr-proxy:heimdallr-proxy)",
        "-e2e.connector-binary=../../$(location //cmd/heim-connector:heim-connector)",
    ],
    data = [
        "//cmd/heim-connector",
        "//cmd/heimdallr-proxy",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//e2e/framework",
        "//pkg/config/configv2",
        "//pkg/database",
        "//pkg/session",
    ],
)
