load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "scenario_test",
    srcs = [
        "dashboard_test.go",
        "proxy_test.go",
    ],
    args = [
        "-e2e.binary=../../$(location //cmd/heimdallr-proxy:heimdallr-proxy)",
        "-e2e.connector-binary=../../$(location //cmd/heim-connector:heim-connector)",
        "-e2e.tunnel-binary=../../$(location //cmd/heim-tunnel:heim-tunnel)",
        "-e2e.vault-binary=../../$(location @vault//:bin)",
    ],
    data = [
        "//cmd/heim-connector",
        "//cmd/heim-tunnel",
        "//cmd/heimdallr-proxy",
        "@vault//:bin",
    ],
    flaky = True,
    visibility = ["//visibility:public"],
    deps = [
        "//e2e/framework",
        "//pkg/config/configv2",
        "//pkg/config/userconfig",
        "//pkg/database",
        "//pkg/session",
        "//pkg/testing/btesting",
    ],
)
