load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "certmanager",
    srcs = ["embed.go"],
    embedsrcs = [
        "cert-manager.yaml",
        "cluster-issuer.yaml",
    ],
    importpath = "go.f110.dev/heimdallr/manifest/certmanager",
    visibility = ["//visibility:public"],
)
